--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,18 @@
 doctype html
+mixin item(title, url)
+  li
+    a(href=url class=`${path == url ? 'active' : 'disabled'}`)=title
+
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      ul
+        +item('Strona glowna', '/')
+        +item('News', '/news')
+        +item('Quiz', '/quiz')
+        +item('Admin', '/admin')
+
     block content
